# Adv_ass3_original

./: CMakeLists.txt  CategoryVec.cpp  CategoryVec.h  Client.cpp  DataSimilarityItem.cpp  DataSimilarityItem.h  Distance.cpp  Distance.h  KNN_System  KNN_System.cpp  KNN_System.h  KnnSysRun.cpp  KnnSysRun.h  Main  Makefile  README copy.md  README.md  Server  Server.cpp  Stream.cpp  Stream.h  Vec  Vec.cpp  Vec.h  a.out  client.out  server.out
